# C-Snake-Game

./: CMakeLists.txt  README.md
doc/html/: _controller_8c.html  _controller_8h.html  _controller_8h_source.html  _event_handler_8c.html  _event_handler_8h.html  _event_handler_8h_source.html  _food_8c.html  _food_8h.html  _food_8h_source.html  _game_object_8c.html  _game_object_8h.html  _game_object_8h_source.html  _game_state_8c.html  _game_state_8h.html  _game_state_8h_source.html  _init_8c.html  _init_8h.html  _init_8h_source.html  _map_8c.html  _map_8h.html  _map_8h_source.html  _player_8c.html  _player_8h.html  _player_8h_source.html  _r_e_a_d_m_e_8md.html  _snake_8c.html  _snake_8h.html  _snake_8h_source.html  _xC3_x9Aj_01sz_xC3_xB6veges_01dokumentum_8md.html  annotated.html  classes.html  dir_0b8b2ecadc563bf9929a674672472efb.html  dir_0de19245053d2e2574ef4a277c594fdc.html  dir_1d53745705d4b27c1a3936bce87a126f.html  dir_1ec7dd97195fbe6c646ecf7baefeea28.html  dir_26dbb51e858fb9f489269a0c00ab3cb5.html  dir_31d4ea8148997abe7a56a5b07f2fed83.html  dir_391513bbec656ad0f0b1433a02685683.html  dir_3e5c4b1651822ed7735c3fa0768f89b8.html  dir_448f96b75df373f4a5a45529fbbbfbbd.html  (+71 more)
include/SDL2/: SDL.h  SDL2_framerate.c  SDL2_framerate.h  SDL2_gfxPrimitives.c  SDL2_gfxPrimitives.h  SDL2_imageFilter.c  SDL2_imageFilter.h  SDL2_rotozoom.c  SDL2_rotozoom.h  SDL_assert.h  SDL_atomic.h  SDL_audio.h  SDL_bits.h  SDL_blendmode.h  SDL_clipboard.h  SDL_config.h  SDL_cpuinfo.h  SDL_egl.h  SDL_endian.h  SDL_error.h  SDL_events.h  SDL_filesystem.h  (+58 more)
res/: LeaderBoard.txt
src/: main.c
(+82 files in other folders)
